--- a/src/maze-solver/Cargo.toml
+++ b/src/maze-solver/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+getrandom = { version = "0.2", features = ["js"] }
 wasm-bindgen = "0.2.74"
+rand = "0.8"
