--- a/src/maze-solver/Cargo.toml
+++ b/src/maze-solver/Cargo.toml
@@ -9,5 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 getrandom = { version = "0.2", features = ["js"] }
-wasm-bindgen = "0.2.74"
+wasm-bindgen-futures = "0.4.37"
+wasm-bindgen = "0.2.87"
+js-sys = "0.3.64"
 rand = "0.8"
